--- a/baker/index.html
+++ b/baker/index.html
@@ -120,7 +120,106 @@
 			</div>
 		</div>
 	</section>
-			
+	<section class="fivethsection">
+		<div class="container">
+			<div class="pofo">
+				<div class="ipofo"></div>
+				<div class="inpofo"></div>
+			</div>
+		</div>
+	</section>	
+	
+	<section class="sixthsection">
+		<div class="container">
+			<div class="hnbox">
+			<div class="nihbox1">
+				<div class="nbox1"></div>
+				<div class="nbox1"></div>
+				<div class="nbox1"></div>	
+			</div>
+			<div class="nihbox2">
+				<div class="nbox2"></div>
+				<div class="nbox2"></div>
+				<div class="nbox2"></div>
+			</div>
+			<div class="nihbox3">
+				<div class="nbox3"></div>
+				<div class="nbox3"></div>
+				<div class="nbox3"></div>
+			</div>
+			</div>
+		</div>
+	</section>
+		
+	<section class="savanthsection">
+		<div class="container">
+			<div class="hteam">
+				<div class="ihteam"></div>
+			</div>
+			<div class="htrbox">
+				<div class="itrbox"></div>
+				<div class="itrbox"></div>
+				<div class="itrbox"></div>
+			</div>
+		</div>
+	</section>
+	<section class="eithsection">
+		<div class="container">
+			<div class="pric">
+				<div class="iipric"></div>
+			</div>
+		</div>
+	</section>	
+	<section class="ehsection">
+		<div class="container">
+			<div class="fohbox">
+				<div class="ifobox"></div>
+				<div class="ifobox"></div>
+				<div class="ifobox"></div>
+				<div class="ifobox"></div>
+			</div>
+		</div>
+	</section>
+	<section class="nithsection">
+		<div class="container">
+			<div class="freq">
+				<div class="ifreq"></div>
+			</div>
+			<div class="icontent"></div>
+		</div>
+	</section>	
+	<section class="tenthsection">
+		<div class="container">
+			<div class="contact">
+				<div class="inscontact"></div>
+			</div>
+			<div class="inhcontact">
+				<div class="inchb1">
+					<div class="inchba"></div>
+					<div class="inchbb"></div>
+					<div class="inchbc"></div>
+				</div>
+				<div class="inchb2">
+					<div class="inchbd"></div>
+				</div>
+			</div>
+		</div>
+	</section>	
+	
+	<section class="lastsection">
+		<div class="container">
+			<div class="focbox">
+				<div class="ifocbox"></div>
+				<div class="ifocbox"></div>
+				<div class="ifocbox"></div>
+				<div class="ifocbox"></div>
+			</div>
+			<div class="lastfooter">
+				<div class="inlfr"></div>
+				<div class="inlfr"></div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
