--- a/baker/baker.html
+++ b/baker/baker.html
@@ -5,8 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Baker</title>
-		<link rel ="icon" type="image/icon" href="">
+		<link rel ="icon" type="image/icon" href="image/favicon.png">
 		<link rel="stylesheet" href="baker.css">
+		<script src="https://code.iconify.design/iconify-icon/1.0.0-beta.3/iconify-icon.min.js"></script>
 </head>
 
 <body>
@@ -36,18 +37,19 @@
 			<div class="container">
 				<h1>Welcome to Baker</h1>
 					<p>We are team of talented designers making websites with Bootstrap</p>
+						<button class="fbutton">Get Started</button>
 			</div>
 		</div>
 	</section>
 		<div class="fullfooter">
 			<div class="container">
 				<div class="fffull">
-					<div class="ff1"><image href="image/clients/clients-1.png"></image></div>
-					<div class="ff2">2</div>
-					<div class="ff3">3</div>
-					<div class="ff4">4</div>
-					<div class="ff5">5</div>
-					<div class="ff6">6</div>
+					<div class="ff1"><image src="./image/clients/client-1.png" width="100px"></image></div>
+					<div class="ff2"><image src="./image/clients/client-2.png" width="100px"></image></div>
+					<div class="ff3"><image src="./image/clients/client-3.png" width="100px"></image></div>
+					<div class="ff4"><image src="./image/clients/client-4.png" width="100px"></image></div>
+					<div class="ff5"><image src="./image/clients/client-5.png" width="100px"></image></div>
+					<div class="ff6"><image src="./image/clients/client-6.png" width="100px"></image></div>
 				</div>
 			</div>
 		</div>
@@ -58,48 +60,78 @@
 				<div class="ssimage"> </div>
 				
 				<div class="isfdiv">
-					<div class="vol">Voluptatem dignissimos provident quasi </div>
+					<div class="vol">
+					    <h2>Voluptatem dignissimos provident quasi</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit</p>
+				    </div> 
+						
 					<div class="isb">
 						<div class="corp">
-							<div class="incorp"> </div>
+							<div class="incorp"> <iconify-icon class="bxr" icon="bx:receipt"></iconify-icon>
+								<h2>Corporis voluptates sit</h2>
+								<p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip<p>
+							</div>
 						</div>
 						<div class="ulla">
-							<div class="inulla"> </div>
+							<div class="inulla"><iconify-icon class="bxc" icon="bx:cube-alt"></iconify-icon>
+								<h2>Ullamco laboris nisi</h2>
+								<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>	
-			<div class="secondfooter">
-				<div class="container">
-					<div class="sffn">
-						<div class="shf1"></div>
-						<div class="shf1"></div>
-						<div class="shf1"></div>
-						<div class="shf1"></div>
-					</div>
+		<div class="secondfooter">
+			<div class="container">
+				<div class="sffn">
+					<div class="shf1"><p>232</p><span>Clients</span></div>
+					<div class="shf1"><p>521</p><span>project</span></div>
+					<div class="shf1"><p>1463</p><span>Hours of support<span></div>
+					<div class="shf1"><p>15</p><span>Hard works<span></div>
 				</div>
 			</div>
+		</div>
 	
 	<section class="thheader">
 		<div class="container">
 			<div class="services">
-				<h1></h1>
-				<p></p>
+				<h1>SERVICES</h1>
+				<button class="sbutton"></button>
 			</div>
+				<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 	</section>
+	
 	<section class="thirdsection">	
 	    <div class="container">
 			<div class="holsixbox1">
-				<div class="hsb1"></div>
-				<div class="hsb1"></div>
-				<div class="hsb1"></div>
+				<div class="hsb1"><iconify-icon class="bid" icon="icon-park-outline:dribble"></iconify-icon>
+					<h1>Lorem Ipsum</h1>
+					<p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+				</div>
+				<div class="hsb1"><iconify-icon class="bif"icon="bx:file"></iconify-icon>
+					<h1>Sed Perspiciatis</h1>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+				</div>
+				<div class="hsb1"><iconify-icon class="bit"icon="bx:tachometer"></iconify-icon>
+					<h1>Magni Dolores</h1>
+					<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+				</div>
 			</div>
 			<div class="holsixbox2">
-				<div class="hsb2"></div>
-				<div class="hsb2"></div>
-				<div class="hsb2"></div>
+				<div class="hsb2"><iconify-icon class="bil" icon="bx:layer"></iconify-icon>
+					<h1>Nemo Enim</h1>
+					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+				</div>
+				<div class="hsb2"><iconify-icon class="bis"icon="bx:slideshow"></iconify-icon>
+					<h1>Dele Cardo</h1>
+					<p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+				</div>
+				<div class="hsb2"><iconify-icon class="bia"icon="bx:arch"></iconify-icon>
+					<h1>Divera Don</h1>
+					<p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+				</div>
 			</div>
 		</div>
 	</section>
