--- a/baker/baker.html
+++ b/baker/baker.html
@@ -99,9 +99,11 @@
 			<div class="services">
 				<h1>SERVICES</h1>
 				<button class="sbutton"></button>
-			</div>
 				<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+			</div>
+		</div>
 	</section>
+	
 	
 	<section class="thirdsection">	
 	    <div class="container">
@@ -137,13 +139,19 @@
 	</section>
 	<section class="fsh">
 		<div class="container">
-			<div class="callto">asdfg;lkjhg asdfg ;lkjh asdfg ;lkjh asdfgg ;lkjh assdfg ;lkjh asdfg ;lkjh asdfg ;lkjh</div>
+			<div>
+				<h1>Call To Action</h1>
+				<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<button class="callbutton">Call To Action</button>
+			</div>
 		</div>
 	</section>
 	<section class="fourthsection">
 		<div class="container">
 			<div class="fosh">
-				<div class="ifosh"></div>
+				<h1>TESTIMONIALS</h1>
+				<button class="teline"></button>
+				<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 			</div>
 			<div class="htbox">
 				<div class="trbox"></div>
@@ -155,9 +163,15 @@
 	</section>
 	<section class="fivethsection">
 		<div class="container">
-			<div class="pofo">
-				<div class="ipofo"></div>
-				<div class="inpofo"></div>
+		<div class="pofo">
+			<h1>PORTFOLIO</h1>
+			<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+		</div>	
+			<div class="pofo4">
+				<button>All</button>
+				<button>App</button>
+				<button>Card</button>
+				<button>Web</button>
 			</div>
 		</div>
 	</section>	
