--- a/baker/baker.html
+++ b/baker/baker.html
@@ -154,9 +154,36 @@
 				<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 			</div>
 			<div class="htbox">
-				<div class="trbox"></div>
-				<div class="trbox"></div>
-				<div class="trbox"></div>
+				<div class="trbox">
+					<p>
+						<iconify-icon class="qs1" icon="mingcute:quote-left-fill"></iconify-icon>
+						Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+						<iconify-icon class="qs1" icon="mingcute:quote-right-fill"></iconify-icon>
+					</p>
+					<image class="trimg" src="image/testimonials/testimonials-2.jpg" alt=""></image>
+					<h3>Sara Wilsson</h3>
+					<h4>Designer</h4>
+				</div>
+				<div class="trbox">
+					<p>
+						<iconify-icon class="qs1" icon="mingcute:quote-left-fill"></iconify-icon>
+						 Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+						<iconify-icon class="qs1" icon="mingcute:quote-right-fill"></iconify-icon>
+					</p>
+					<image class="trimg" src="image/testimonials/testimonials-4.jpg" alt=""></image>
+					<h3>Matt Brandon</h3>
+					<h4>Freelancer</h4>
+				</div>
+				<div class="trbox">
+					<p>
+						<iconify-icon class="qs1" icon="mingcute:quote-left-fill"></iconify-icon>
+						Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+						<iconify-icon class="qs1" icon="mingcute:quote-right-fill"></iconify-icon>
+					</p>
+					<image class="trimg" src="image/testimonials/testimonials-3.jpg" alt=""></image>
+					<h3>Jena Karlis</h3>
+					<h4>Store Owner</h4>
+				</div>
 				
 			</div>
 		</div>
@@ -165,13 +192,14 @@
 		<div class="container">
 		<div class="pofo">
 			<h1>PORTFOLIO</h1>
+			<button class="pobu"></button>
 			<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 		</div>	
 			<div class="pofo4">
-				<button>All</button>
-				<button>App</button>
-				<button>Card</button>
-				<button>Web</button>
+				<button class="bu4">All</button>
+				<button class="bu4">App</button>
+				<button class="bu4">Card</button>
+				<button class="bu4">Web</button>
 			</div>
 		</div>
 	</section>	
