--- a/baker/baker.html
+++ b/baker/baker.html
@@ -207,21 +207,21 @@
 	<section class="sixthsection">
 		<div class="container">
 			<div class="hnbox">
-			<div class="nihbox1">
-				<div class="nbox1"></div>
-				<div class="nbox1"></div>
-				<div class="nbox1"></div>	
-			</div>
-			<div class="nihbox2">
-				<div class="nbox2"></div>
-				<div class="nbox2"></div>
-				<div class="nbox2"></div>
-			</div>
-			<div class="nihbox3">
-				<div class="nbox3"></div>
-				<div class="nbox3"></div>
-				<div class="nbox3"></div>
-			</div>
+				<div class="nihbox1">
+					<div class="nbox1"><image class="izg" src="image/portfolio/portfolio-1.jpg" alt=""></image></div>
+					<div class="nbox1"><image class="izg" src="image/portfolio/portfolio-2.jpg" alt=""></image></div>
+					<div class="nbox1"><image class="izg" src="image/portfolio/portfolio-3.jpg" alt=""></image></div>	
+				</div>
+				<div class="nihbox2">
+					<div class="nbox2"><image  class="izg" src="image/portfolio/portfolio-4.jpg" alt=""></image></div>
+					<div class="nbox2"><image  class="izg" src="image/portfolio/portfolio-5.jpg" alt=""></image></div>
+					<div class="nbox2"><image  class="izg" src="image/portfolio/portfolio-6.jpg" alt=""></image></div>
+				</div>
+				<div class="nihbox3">
+					<div class="nbox3"><image  class="izg" src="image/portfolio/portfolio-7.jpg" alt=""></image></div>
+					<div class="nbox3"><image  class="izg" src="image/portfolio/portfolio-8.jpg" alt=""></image></div>
+					<div class="nbox3"><image  class="izg" src="image/portfolio/portfolio-9.jpg" alt=""></image></div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -229,12 +229,31 @@
 	<section class="savanthsection">
 		<div class="container">
 			<div class="hteam">
-				<div class="ihteam"></div>
+				<h1>TEAM</h1>
+				<div class="tdl"></div>
+				<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 			</div>
 			<div class="htrbox">
-				<div class="itrbox"></div>
-				<div class="itrbox"></div>
-				<div class="itrbox"></div>
+				<div class="itrbox">
+					<image class="t4i" src="image/team/team-1.jpg" alt=""></image>
+					<h2>Walter White</h2>
+					<h3>Chief Executive Officer</h3>
+				</div>
+				<div class="itrbox">
+					<image class="t4i" src="image/team/team-2.jpg" alt=""></image>
+					<h2>Sarah Jhonson</h2>
+					<h3>Product Manager</h3>
+				</div>
+				<div class="itrbox">
+					<image class="t4i" src="image/team/team-3.jpg" alt=""></image>
+					<h2>William Anderson</h2>
+					<h3>CTO</h3>
+				</div>
+				<div class="itrbox">
+					<image class="t4i" src="image/team/team-4.jpg" alt=""></image>
+					<h2>Amanda Jepson</h2>
+					<h3>Accountant</h3>
+				</div>
 			</div>
 		</div>
 	</section>
