--- a/baker/baker.html
+++ b/baker/baker.html
@@ -260,17 +260,71 @@
 	<section class="eithsection">
 		<div class="container">
 			<div class="pric">
-				<div class="iipric"></div>
+				<h1>PRICING</h1>
+				<div class="pld"></div>
+				<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 			</div>
 		</div>
 	</section>	
 	<section class="ehsection">
 		<div class="container">
 			<div class="fohbox">
-				<div class="ifobox"></div>
-				<div class="ifobox"></div>
-				<div class="ifobox"></div>
-				<div class="ifobox"></div>
+				<div class="ifobox">
+					<h3>Free</h3>
+					<h4><sup>$</sup>0<span> / month</span></h4>
+					<ul>
+						<li>Aida dere</li>
+						<li>Nec feugiat nisl</li>
+						<li>Nulla at volutpat dola</li>
+						<li class="del"><del>Pharetra massa</del></li>
+						<li class="del"><del>Massa ultricies mi</del></li>
+					</ul>
+					<div class="buybu">
+						<button class="buy">Buy Now</button>
+					</div>
+				</div>
+				<div class="ifobox">
+					<h3>Business</h3>
+					<h4><sup>$</sup>19<span> / month</span></h4>
+					<ul>
+						<li>Aida dere</li>
+						<li>Nec feugiat nisl</li>
+						<li>Nulla at volutpat dola</li>
+						<li>Pharetra massa</li>
+						<li class="del"><del>Massa ultricies mi</del></li>
+					</ul>
+					<div class="buybu">
+						<button class="buy">Buy Now</button>
+					</div>
+				</div>
+				<div class="ifobox">
+					<h3>Developer</h3>
+					<h4><sup>$</sup>29<span> / month</span></h4>
+					<ul>
+						<li>Aida dere</li>
+						<li>Nec feugiat nisl</li>
+						<li>Nulla at volutpat dola</li>
+						<li>Pharetra massa</li>
+						<li>Massa ultricies mi</li>
+					</ul>
+					<div class="buybu">
+						<button class="buy">Buy Now</button>
+					</div>
+				</div>
+				<div class="ifobox">
+					<h3>Ultimate</h3>
+					<h4><sup>$</sup>49<span> / month</span></h4>
+					<ul>
+						<li>Aida dere</li>
+						<li>Nec feugiat nisl</li>
+						<li>Nulla at volutpat dola</li>
+						<li>Pharetra massa</li>
+						<li>Massa ultricies mi</li>
+					</ul>
+					<div class="buybu">
+						<button class="buy">Buy Now</button>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
