--- a/baker/baker.html
+++ b/baker/baker.html
@@ -331,24 +331,72 @@
 	<section class="nithsection">
 		<div class="container">
 			<div class="freq">
-				<div class="ifreq"></div>
+				<h1>FREQUENTLY ASKED QUESTIONS</h1>
+				<div class="frli"></div>
+				<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 			</div>
-			<div class="icontent"></div>
+			<div class="icontent">
+				<div class="icb">
+					<h2>Non consectetur a erat nam at lectus urna duis?</h2>
+					<p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+				</div>
+				<div class="icb">
+					<h2>Feugiat scelerisque varius morbi enim nunc?</h2>
+					<p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
+				</div>
+				<div class="icb">
+					<h2>Dolor sit amet consectetur adipiscing elit?</h2>
+					<p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
+				</div>
+				<div class="icb">
+					<h2>Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h2>
+					<p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in.</p>
+				</div>
+				<div class="icb">
+					<h2>Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor?</h2>
+					<p>Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque.</p>
+				</div>
+			</div>
 		</div>
 	</section>	
 	<section class="tenthsection">
 		<div class="container">
 			<div class="contact">
-				<div class="inscontact"></div>
+				<h1>CONTACT</h1>
+				<div class="inl"></div>
+				<p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
 			</div>
 			<div class="inhcontact">
-				<div class="inchb1">
-					<div class="inchba"></div>
-					<div class="inchbb"></div>
-					<div class="inchbc"></div>
+				<div class="inhc">
+					<div class="inchb1">
+						<iconify-icon class="map" icon="bx:map"></iconify-icon>
+						<h2>Our Address</h2>
+						<h4>A108 Adam Street, New York, NY 535022</h4>
+					</div>
+					<div class="inchb2">
+						<div class="inchbb">
+							<iconify-icon class="email" icon="ic:outline-email"></iconify-icon>
+							<h2>Email Us</h2>
+							<h4>info@example.com</h4>
+							<h4>contact@example.com</h4>
+						</div>
+						<div class="inchbc">
+							<iconify-icon class="phone"icon="carbon:phone-voice"></iconify-icon>
+							<h2>Call Us</h2>
+							<h4>+1 5589 55488 55</h4>
+							<h4>+1 6678 254445 41</h4>
+						</div>
+					</div>
 				</div>
-				<div class="inchb2">
-					<div class="inchbd"></div>
+				<div class="inhc2">
+					<div class="inchb3">
+							<div class="incfl">
+								<input class="yn" type="text" placeholder="Your Name">
+								<input class="ye" type="text" placeholder="Your Email">
+							</div>
+								<input class="subj" type="text" placeholder="Subject"><br>
+								<textarea class="mess" placeholder="Message"></textarea>
+					</div>
 				</div>
 			</div>
 		</div>
