--- a/baker/index.html
+++ b/baker/index.html
@@ -220,6 +220,64 @@
 			</div>
 		</div>
 	</section>
+	
+	<...!...../>
+	<h1><center>Table Tag in HTML</table></h1>
+<br>
+<br>
+
+<table border="6px" cellspacing ="10px" cellpadding="2px">
+<tr><td colspan=5 align="center">Candidate Names</td></tr>
+<th>sl.no</th>
+<th>date</th>
+<th>name</th>
+<th>from</th/>
+<th>project</th>
+
+ <tr>
+    <td align="center">1</td>
+    <td>1/2/2000</td>
+    <td>ganesh</td>
+    <td>s.v.karai</td>
+    <td>html</td>
+   </tr>
+   
+   <tr>
+    <td align="center">2</td>
+	<td>2/3/2001<//td>
+    <td>gopi</td>
+	<td>s.v.karai</td>
+	<td>html</td>
+   </tr>
+   
+   <tr>
+    <td align="center">3</td>
+	<td>3/4/2003</td>
+	<td>karthik</td>
+	<td>anaikulama</td>
+	<td>html</td>
+	</tr>
+	
+	<tr>
+	 <td align="center">4</td>
+	 <td>4/5/2004</td>
+	 <td>velmurugan</td>
+	 <td>kadaiyam</td>
+	 <td>html</td>
+	 </tr>
+	 
+	 
+	 <tr>
+       <td align="center">5</td>
+	   <td>5/6/2005</td>
+	   <td>prabakar</td>
+	   <td>kmc</td>
+	   <td>html</td>
+	 </tr>
+	 
+	 <tfoot><td colspan="5" align="center">thats all</td></tfoot>
+	
+</table>
 </body>
 
 </html>
