--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -37,14 +37,22 @@
 			</div>
 		</section>
 	</div>
-	<div class="">
+	<div class="aboutbox">
 		<section class="container">
-			<div class="">
+			<div class="inabout">
+				<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et,
+				porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
+				<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et,
+				porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
+				<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et,
+				porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
 			</div>
 		</section>
 	</div>
  
- 
+	<main>
+		
+	</main
  
  
  </body>
