--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>DevFolio</title>
-		<link rel ="icon" type="image/icon" href="">
+		<link rel ="icon" type="image/icon" href="favicon.png">
 		<link rel="stylesheet" href="style.css">
 </head>
  <body>
@@ -40,19 +40,32 @@
 	<div class="aboutbox">
 		<section class="container">
 			<div class="inabout">
-				<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et,
-				porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
-				<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et,
-				porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
-				<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et,
-				porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
+				<div class="profilebox">
+					<div class="proinfer">
+						<div class="profile">
+							<image src="image/testimonial-2.jpg" alt="image"><image>
+						</div>
+						<div class="infer">
+							<p><span>Name:</span>Morgan Freeman</p>
+							<p><span>Profile:</span>full stack developer</p>
+							<p><span>Email:</span>contact@example.com</p>
+							<p><span>Phone:</span>(617) 557-0089</p>
+						</div>
+					</div>
+					<div class="skill">
+						
+					</div>
+				</div>
+				<div class="aboutme">
+					<h1>About me</h1>
+					<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
+					<p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.</p>
+					<p>Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
+				</div>
 			</div>
 		</section>
 	</div>
  
-	<main>
-		
-	</main
  
  
  </body>
