--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -53,11 +53,20 @@
 						</div>
 					</div>
 					<div class="skill">
-						
+						<h1>Skill</h1>
+							<h3>HTML 85%</h3>
+								<div class="fline"></div>
+							<h3>CSS3 75%</h3>
+								<div class="fline"></div>
+							<h3>PHP 50%</h3>
+								<div class="fline"></div>
+							<h3>JAVASCRIPT 90%</h3>
+								<div class="fline"></div>
 					</div>
 				</div>
 				<div class="aboutme">
 					<h1>About me</h1>
+					<div class="aboutli"></div>
 					<p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor accumsan tincidunt.</p>
 					<p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.</p>
 					<p>Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
@@ -65,7 +74,19 @@
 			</div>
 		</section>
 	</div>
- 
- 
+	<div class="">
+		<section class="container">
+			<div class="">
+				<div class=""></div>
+			</div>
+		</section>
+	</div>
+	<div class="">
+		<section class="container">
+			<div class="">
+				<div class=""></div>
+			</div>
+		</section>
+	</div>
  
  </body>
