--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -7,6 +7,7 @@
 		<title>DevFolio</title>
 		<link rel ="icon" type="image/icon" href="favicon.png">
 		<link rel="stylesheet" href="style.css">
+		<script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 </head>
  <body>
 	<header>
@@ -43,7 +44,7 @@
 				<div class="profilebox">
 					<div class="proinfer">
 						<div class="profile">
-							<image src="image/testimonial-2.jpg" alt="image"><image>
+							<image class="simg" src="image/testimonial-2.jpg" alt="image"><image>
 						</div>
 						<div class="infer">
 							<p><span>Name:</span>Morgan Freeman</p>
@@ -54,14 +55,22 @@
 					</div>
 					<div class="skill">
 						<h1>Skill</h1>
-							<h3>HTML 85%</h3>
-								<div class="fline"></div>
-							<h3>CSS3 75%</h3>
-								<div class="fline"></div>
-							<h3>PHP 50%</h3>
-								<div class="fline"></div>
-							<h3>JAVASCRIPT 90%</h3>
-								<div class="fline"></div>
+							<p>HTML 85%</p>
+								<div class="fline">
+									<div class="html85"></div>
+								</div>
+							<p>CSS3 75%</p>
+								<div class="fline">
+									<div class="css375"></div>
+								</div>
+							<p>PHP 50%</p>
+								<div class="fline">
+									<div class="php50"></div>
+								</div>
+							<p>JAVASCRIPT 90%</p>
+								<div class="fline">
+									<div class="js90"></div>
+								</div>
 					</div>
 				</div>
 				<div class="aboutme">
@@ -74,10 +83,62 @@
 			</div>
 		</section>
 	</div>
-	<div class="">
+	<div class="sfout">
 		<section class="container">
-			<div class="">
-				<div class=""></div>
+			<div class="serviesfull">
+				<div class="services">
+					<h1>SERVICES</h1>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+					<div class="servline"></div>
+				</div>
+				<div class="servicesbox">
+					<div class="shb1">
+						<div class="wwb">
+							<div class="icd"><iconify-icon class="icdic"icon="bi:briefcase"></iconify-icon></div>
+							<h2>WEB DESIGN</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+							</p>
+						</div>
+						<div class="wwb">
+							<div></div>
+							<h2>WEB DEVELOPMENT</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem 
+							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+							</p>
+						</div>
+						<div class="wwb">
+							<div></div>
+							<h2>PHOTOGRAPHY</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem 
+							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+							</p>
+						</div>
+					</div>
+					<div class="shb2">
+						<div class="rgm">
+							<div></div>
+							<h2>RESPONSIVE DESIGN</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+							</p>
+						</div>
+						<div class="rgm">
+							<div></div>
+							<h2>GRAPHIC DESIGN</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+							</p>
+						</div>
+						<div class="rgm">
+							<div></div>
+							<h2>MARKETING SERVICES</h2>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem 
+							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</section>
 	</div>
