--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -94,21 +94,21 @@
 				<div class="servicesbox">
 					<div class="shb1">
 						<div class="wwb">
-							<div class="icd"><iconify-icon class="icdic"icon="bi:briefcase"></iconify-icon></div>
+							<div class="icd"><iconify-icon class="icdic" icon="bi:briefcase"></iconify-icon></div>
 							<h2>WEB DESIGN</h2>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
 							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
 							</p>
 						</div>
 						<div class="wwb">
-							<div></div>
+							<div class="icd"><iconify-icon  class="icdic" icon="bi:card-checklist"></iconify-icon></div>
 							<h2>WEB DEVELOPMENT</h2>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem 
 							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
 							</p>
 						</div>
 						<div class="wwb">
-							<div></div>
+							<div class="icd"><iconify-icon   class="icdic" icon="bi:bar-chart"></iconify-icon></div>
 							<h2>PHOTOGRAPHY</h2>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem 
 							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
@@ -117,21 +117,21 @@
 					</div>
 					<div class="shb2">
 						<div class="rgm">
-							<div></div>
+							<div class="icd"><iconify-icon class="icdic" icon="bi:binoculars"></iconify-icon></div>
 							<h2>RESPONSIVE DESIGN</h2>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
 							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
 							</p>
 						</div>
 						<div class="rgm">
-							<div></div>
+							<div class="icd"><iconify-icon class="icdic" icon="bi:brightness-high"></iconify-icon></div>
 							<h2>GRAPHIC DESIGN</h2>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
 							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
 							</p>
 						</div>
 						<div class="rgm">
-							<div></div>
+							<div class="icd"><iconify-icon class="icdic" icon="bi:calendar4-week"></iconify-icon></div>
 							<h2>MARKETING SERVICES</h2>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem 
 							fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
@@ -142,9 +142,9 @@
 			</div>
 		</section>
 	</div>
-	<div class="">
+	<div class="numst">
 		<section class="container">
-			<div class="">
+			<div class="innus">
 				<div class=""></div>
 			</div>
 		</section>
