--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -145,9 +145,74 @@
 	<div class="numst">
 		<section class="container">
 			<div class="innus">
+				<div class="ntd">
+					<div class="nic"></div>
+					<h2>450</h2>
+					<h4>WORKS COMPLETED</h4>
+				</div>
+				<div class="ntd">
+					<div></div>
+					<h2>25</h2>
+					<h4>YEARS OF EXPERIENCE</h4>
+				</div>
+				<div class="ntd">
+					<div></div>
+					<h2>550</h2>
+					<h4>TOTAL CLIENTS</h4>
+				</div>
+				<div class="ntd">
+					<div></div>
+					<h2>48</h2>
+					<h4>AWARD WON</h4>
+				</div>
+			</div>
+		</section>
+	</div>
+	<div class="portfolio">
+		<section class="container">
+			<div class="inpofo">
+				<h1>PORTFOLIO</h1>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+				<div class="pofoline"></div>
+			</div>
+		
+			<div class="pofobox1">
+				<div class="llm">
+					<h3>Lorem impsum dolor</h3>
+					<p><span>Web Design</span>/ 18 Sep. 2018</p>
+				</div>
+				<div class="llm">
+					<h3>Loreda Cuno Nere</h3>
+					<p><span>Web Design</span> / 18 Sep. 2018</p>
+				</div>
+				<div class="llm">
+					<h3>Mavrito Lana Dere</h3>
+					<p><span>Web Design</span> / 18 Sep. 2018</p>
+				</div>
+				
+			</div>
+			<div class="pofobox2">
+				<div class="bss">
+					<h3>Bindo Laro Cado</h3>
+					<p><span>Web Design</span> / 18 Sep. 2018</p>
+				</div>
+				<div class="bss">
+					<h3>Studio Lena Mado</h3>
+					<p><span>Web Design</span> / 18 Sep. 2018</p>
+				</div>
+				<div class="bss">
+					<h3>Studio Big Bang</h3>
+					<p><span>Web Design</span> / 18 Sep. 2017</p>
+				</div>
+			</div>
+
+		</section>
+	</div>
+		<div class="">
+		<section class="container">
+			<div class="">
 				<div class=""></div>
 			</div>
 		</section>
 	</div>
- 
  </body>
