--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -146,22 +146,22 @@
 		<section class="container">
 			<div class="innus">
 				<div class="ntd">
-					<div class="nic"></div>
+					<div class="nic"><iconify-icon class="icn" icon="bi:check"></iconify-icon></div>
 					<h2>450</h2>
 					<h4>WORKS COMPLETED</h4>
 				</div>
 				<div class="ntd">
-					<div></div>
+					<div class="nic"><iconify-icon class="icn" icon="bi:journal-richtext"></iconify-icon></div>
 					<h2>25</h2>
 					<h4>YEARS OF EXPERIENCE</h4>
 				</div>
 				<div class="ntd">
-					<div></div>
+					<div class="nic"><iconify-icon class="icn" icon="bi:people"></iconify-icon></div>
 					<h2>550</h2>
 					<h4>TOTAL CLIENTS</h4>
 				</div>
 				<div class="ntd">
-					<div></div>
+					<div class="nic"><iconify-icon class="icn" icon="bi:award"></iconify-icon></div>
 					<h2>48</h2>
 					<h4>AWARD WON</h4>
 				</div>
@@ -178,14 +178,17 @@
 		
 			<div class="pofobox1">
 				<div class="llm">
+					<image class="pofoimg" src="image/work-1.jpg" alt=""></image>
 					<h3>Lorem impsum dolor</h3>
 					<p><span>Web Design</span>/ 18 Sep. 2018</p>
 				</div>
 				<div class="llm">
+					<image class="pofoimg" src="image/work-2.jpg" alt=""></image>
 					<h3>Loreda Cuno Nere</h3>
 					<p><span>Web Design</span> / 18 Sep. 2018</p>
 				</div>
 				<div class="llm">
+					<image class="pofoimg" src="image/work-3.jpg" alt=""></image>
 					<h3>Mavrito Lana Dere</h3>
 					<p><span>Web Design</span> / 18 Sep. 2018</p>
 				</div>
@@ -193,14 +196,17 @@
 			</div>
 			<div class="pofobox2">
 				<div class="bss">
+					<image class="pofoimg" src="image/work-4.jpg" alt=""></image>
 					<h3>Bindo Laro Cado</h3>
 					<p><span>Web Design</span> / 18 Sep. 2018</p>
 				</div>
 				<div class="bss">
+					<image class="pofoimg" src="image/work-5.jpg" alt=""></image>
 					<h3>Studio Lena Mado</h3>
 					<p><span>Web Design</span> / 18 Sep. 2018</p>
 				</div>
 				<div class="bss">
+					<image class="pofoimg" src="image/work-6.jpg" alt=""></image>
 					<h3>Studio Big Bang</h3>
 					<p><span>Web Design</span> / 18 Sep. 2017</p>
 				</div>
@@ -208,10 +214,23 @@
 
 		</section>
 	</div>
-		<div class="">
+	<div class="marta">
 		<section class="container">
-			<div class="">
-				<div class=""></div>
+			<div class="inmarta">
+				<image class="martaimg" src="image/testimonial-4.jpg" alt=""></image>
+				<h2>MARTA SOCRATE</h2>
+				<p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor <br>sit amet,
+                consectetur adipiscing elit.
+				</p>
+			</div>
+		</section>
+	</div>
+	<div class="blog">
+		<section class="container">
+			<div class="inblog">
+				<h1>BLOG</h1>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+				<div class="blogline"></div>
 			</div>
 		</section>
 	</div>
