--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -178,19 +178,34 @@
 		
 			<div class="pofobox1">
 				<div class="llm">
-					<image class="pofoimg" src="image/work-1.jpg" alt=""></image>
-					<h3>Lorem impsum dolor</h3>
-					<p><span>Web Design</span>/ 18 Sep. 2018</p>
+				    <div class="icllm1">
+						<image class="pofoimg" src="image/work-1.jpg" alt=""></image>
+						<h3>Lorem impsum dolor</h3>
+						<p><span>Web Design</span>/ 18 Sep. 2018</p>
+					</div>
+					<div class="icllm">
+					   <iconify-icon icon="akar-icons:circle-plus"></iconify-icon>
+					</div>
 				</div>
 				<div class="llm">
-					<image class="pofoimg" src="image/work-2.jpg" alt=""></image>
-					<h3>Loreda Cuno Nere</h3>
-					<p><span>Web Design</span> / 18 Sep. 2018</p>
+				    <div class="icllm1">
+						<image class="pofoimg" src="image/work-2.jpg" alt=""></image>
+						<h3>Loreda Cuno Nere</h3>
+						<p><span>Web Design</span> / 18 Sep. 2018</p>
+					</div>
+					<div class="icllm">
+					   <iconify-icon icon="akar-icons:circle-plus"></iconify-icon>
+					</div>
 				</div>
 				<div class="llm">
-					<image class="pofoimg" src="image/work-3.jpg" alt=""></image>
-					<h3>Mavrito Lana Dere</h3>
-					<p><span>Web Design</span> / 18 Sep. 2018</p>
+					<div class="icllm1">
+						<image class="pofoimg" src="image/work-3.jpg" alt=""></image>
+						<h3>Mavrito Lana Dere</h3>
+						<p><span>Web Design</span> / 18 Sep. 2018</p>
+					</div>
+					<div class="icllm">
+					   <iconify-icon icon="akar-icons:circle-plus"></iconify-icon>
+					</div>
 				</div>
 				
 			</div>
@@ -236,7 +251,7 @@
 			<div class="blogflex">
 				<div class="blogbox">
 					<div class="blogimg">
-					    <a href="#"><img src="image/post-1.jpg" alt="img" width="354" height="236"></a>
+					    <a href="#"><img src="image/post-1.jpg" alt="img" width="100%" height="100%"></a>
 					</div>
 					<div class="blogcontent">
 						<div class="blogh6">
@@ -254,14 +269,14 @@
 						    <a href="#"> <img src="image/testimonial-2.jpg" alt="img" width="32" height="32"><span> Morgan Freeman</span></a>
 					    </div>
 					    <div class="clock">
-							<i class="bi bi-clock"></i>
+							<iconify-icon icon="bx:time-five"></iconify-icon>
 							<span>10 min</span>
 					    </div>
 					</div>
 				</div>
 				<div class="blogbox">
 					<div class="blogimg">
-					    <a href="#"><img src="image/post-2.jpg" alt="img" width="354" height="236"></a>
+					    <a href="#"><img src="image/post-2.jpg" alt="img" width="100%" height="100%"></a>
 					</div>
 					<div class="blogcontent">
 						<div class="blogh6">
@@ -279,14 +294,14 @@
 						    <a href="#"> <img src="image/testimonial-2.jpg" alt="img" width="32" height="32"><span> Morgan Freeman</span></a>
 					    </div>
 					    <div class="clock">
-							<i class="bi bi-clock"></i>
+							<iconify-icon icon="bx:time-five"></iconify-icon>
 							<span>10 min</span>
 					    </div>
 					</div>
 				</div>
 				<div class="blogbox">
 					<div class="blogimg">
-					    <a href="#"><img src="image/post-3.jpg" alt="img" width="354" height="236"></a>
+					    <a href="#"><img src="image/post-3.jpg" alt="img" width="100%" height="100%"></a>
 					</div>
 					<div class="blogcontent">
 						<div class="blogh6">
@@ -304,12 +319,13 @@
 						    <a href="#"> <img src="image/testimonial-2.jpg" alt="img" width="32" height="32"><span> Morgan Freeman</span></a>
 					    </div>
 					    <div class="clock">
-							<i class="bi bi-clock"></i>
+							<iconify-icon icon="bx:time-five"></iconify-icon>
 							<span>10 min</span>
 					    </div>
 					</div>
 				</div>
 			</div>
+			
 	    </section>
 	</div>
    <!--End of Blog-->
@@ -337,17 +353,17 @@
 						<div class="touchcontent">
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Facilis dolorum dolorem soluta quidem expedita aperiam<br> aliquid at. Totam magni ipsum suscipit amet? Autem nemo<br> esse laboriosam ratione nobis mollitia inventore?</p>
 							<ul class="touchlist">
-								<li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-								<li><span class="bi bi-phone"></span> (617) 557-0089</li>
-								<li><span class="bi bi-envelope"></span> contact@example.com</li>
+								<li><span><iconify-icon icon="carbon:location"></iconify-icon></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
+								<li><span><iconify-icon icon="akar-icons:mobile-device"></iconify-icon></span> (617) 557-0089</li>
+								<li><span><iconify-icon icon="clarity:email-line"></iconify-icon></span> contact@example.com</li>
 							</ul>
 						</div>
 						<div class="touchicon">
 							<ul class="ulicon">
-								<li><a href="#"><i class="bi bi-facebook"></i></</a></li>
-								<li><a href="#"><i class="bi bi-instagram"></i></a></li>
-								<li><a href="#"><i class="bi bi-twitter"></i></a></li>
-								<li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+								<li><a href="#"><iconify-icon class="lasticon" icon="akar-icons:facebook-fill"></iconify-icon></a></li>
+								<li><a href="#"><iconify-icon icon="ant-design:instagram-outlined"></iconify-icon></a></li>
+								<li><a href="#"><iconify-icon icon="akar-icons:twitter-fill"></iconify-icon></a></li>
+								<li><a href="#"><iconify-icon icon="akar-icons:linkedin-box-fill"></iconify-icon></a></li>
 							</ul>
 						</div>
 				    </div>
@@ -371,3 +387,4 @@
    </footer>
 	
  </body>
+ </html>
